@startuml

entity Branch {
  branch_number INT PRIMARY KEY AUTO_INCREMENT
  ---
  branch_name VARCHAR(255) NOT NULL
  office_number VARCHAR(25) NOT NULL
  contact_person VARCHAR(255) NOT NULL
}

entity Driver {
  driver_number INT PRIMARY KEY AUTO_INCREMENT
  branch_number INT
  ---
  driver_name VARCHAR(255) NOT NULL
  joined_date DATE NOT NULL
}

entity Vehicle {
  vehicle_number INT PRIMARY KEY AUTO_INCREMENT
  ---
  plate_number VARCHAR(255) NOT NULL
  model VARCHAR(255) NOT NULL
  vehicle_year INT NOT NULL
  last_fleet_maintenance DATE NOT NULL
}

entity Fleet {
  fleet_number INT PRIMARY KEY AUTO_INCREMENT
  driver_number INT NOT NULL
  vehicle_number INT NOT NULL
  ---
  fleet_date DATE NOT NULL
  fleet_type CHAR(2) NOT NULL CHECK (fleet_type IN ("01", "02"))
  fleet_status VARCHAR(255) NOT NULL
}

entity Job {
  job_id VARCHAR(255) PRIMARY KEY
  ---
  job_description VARCHAR(255) NOT NULL
  service_charge DECIMAL(10,2) NOT NULL
  part_charge DECIMAL(10,2) NOT NULL
  unit VARCHAR(255) NOT NULL
}

entity FleetDetails {
  fleet_number INT NOT NULL
  job_id VARCHAR(255)
  ---
  quantity INT NOT NULL
  charge_amount DECIMAL(10,2) NOT NULL
}

Driver }|--|| Branch
Fleet ||--|{ Driver
Fleet ||--|{ Vehicle
FleetDetails }|--|| Fleet
FleetDetails ||--|| Job

@enduml
